ui: fixed some dark mode styles that made text unreadable

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
 @theme {
   --background-image-gradient-radial: radial-gradient(var(--tw-gradient-stops));
@@ -27,17 +27,23 @@
 }
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground: #2a2a2a;
+  --background: #e9e9e9;
+  --button-foreground: #f9f9f9;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --foreground: #e9e9e9;
+    --background: #2a2a2a;
+    --button-foreground: #e9e9e9;
   }
+}
+
+@theme inline {
+  --color-foreground: var(--foreground);
+  --color-background: var(--background);
+  --color-button: var(--button-foreground);
 }
 
 @keyframes spin {
@@ -47,4 +53,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+body {
+  background: var(--background);
+  color: var(--foreground);
 }
